cjs + esm support

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@chubbyts/chubbyts-http-types",
-  "version": "1.1.1",
+  "type": "module",
+  "version": "1.2.0",
   "description": "Http Request/Response types with middleware and handler, PSR-15 inspired.",
   "keywords": [
     "chubbyts",
@@ -15,12 +16,11 @@
   "license": "MIT",
   "repository": "chubbyts/chubbyts-http-types",
   "scripts": {
+    "build": "rm -rf ./dist && tsc -b ./tsconfig.types.json ./tsconfig.esm.json ./tsconfig.cjs.json && node ./rename-commonjs.cjs",
     "cs-fix": "prettier --write src",
     "cs": "prettier --check src",
     "lint-fix": "eslint src --fix",
     "lint": "eslint src",
-    "infection": "stryker run",
-    "build": "tsc",
     "prepare": "rm -Rf dist && npm run build && npm run cs"
   },
   "prettier": {
@@ -35,10 +35,9 @@
   "engines": {
     "node": ">=16"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@chubbyts/chubbyts-eslint": "^1.1.2",
-    "@types/node": "^20.4.1",
+    "@chubbyts/chubbyts-eslint": "^2.0.2",
+    "@types/node": "^20.4.4",
     "prettier": "^3.0.0",
     "typescript": "^5.1.6"
   },
