--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
-  "compilerOptions": {
-    "target": "es2019",
-    "module": "commonjs",
-    "outDir": "dist",
-    "strict": true,
-    "declaration": true
-  },
-  "include": ["src"]
+    "compilerOptions": {
+        "target": "ES2021",
+        "strict": true
+    },
+    "include": [
+        "src"
+    ]
 }
