--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,1 @@
-{
-    "compilerOptions": {
-        "target": "ES2021",
-        "moduleResolution": "node",
-        "strict": true
-    },
-    "include": [
-        "src"
-    ]
-}
+node_modules/@chubbyts/chubbyts-packaging/tsconfig.json
