--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@chubbyts/chubbyts-http-types",
   "type": "module",
-  "version": "1.2.3",
+  "version": "1.3.0",
   "description": "Http Request/Response types with middleware and handler, PSR-15 inspired.",
   "keywords": [
     "chubbyts",
@@ -16,10 +16,10 @@
   "license": "MIT",
   "repository": "chubbyts/chubbyts-http-types",
   "scripts": {
-    "build": "node ./build.js",
+    "build": "node ./build.mjs",
     "cs-fix": "prettier --write src",
     "cs": "prettier --check src",
-    "lint-fix": "eslint src --fix",
+    "lint-fix": "eslint src eslint.config.mjs --fix",
     "lint": "eslint src",
     "prepare": "rm -Rf dist && npm run build && npm run cs"
   },
@@ -41,14 +41,14 @@
     }
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   },
   "devDependencies": {
-    "@chubbyts/chubbyts-eslint": "^2.0.7",
-    "@chubbyts/chubbyts-packaging": "^2.0.7",
-    "@types/node": "^20.14.5",
-    "prettier": "^3.3.2",
-    "typescript": "^5.4.5"
+    "@chubbyts/chubbyts-eslint": "^3.0.1",
+    "@chubbyts/chubbyts-packaging": "^3.0.0",
+    "@types/node": "^22.10.5",
+    "prettier": "^3.4.2",
+    "typescript": "^5.7.2"
   },
   "publishConfig": {
     "access": "public"
