--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,5 +3,7 @@ sonar.projectKey=chubbyts_chubbyts-http-types
 sonar.projectName=chubbyts-http-types
 
 sonar.sources=src
+sonar.tests=tests
 sonar.language=typescript
 sonar.sourceEncoding=UTF-8
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
